# rtl-advisor

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml  rtl-advisor.toml
.agents/plugins/: marketplace.json
.github/docker/: mvp-tools.Dockerfile
.github/scripts/: run-mvp-tool-smoke.sh
.github/workflows/: fast-ci.yml  (+1 more)
docs/: known-limitations.md
implementation plan/: MVP V1.md  codex plugin v1.md  frontend v1.md  synthesis redundancy v1.md  synthesis robustness full calibration v1.md  v1.md  v2.1.md  v2.2.md  v2.3.md  v2.md
progress updates/: july 11th.md  july 12th.md  july 13th.md  july 14th.md  july 18th.md  july 19th.md
tests/: test_advisor_explanation_v2.py  test_advisor_v2.py  test_advisor_v22.py  test_agent_api.py  test_benchmark.py  test_benchmark_v2.py  test_benchmark_v21.py  test_benchmark_v22.py  test_calibration.py  test_calibration_v21.py  test_calibration_v22.py  test_candidate_v2.py  test_cli.py  test_codex_analysis.py  test_config.py  test_corpus.py  test_diagnostic_v22.py  test_features_v21.py  test_frontend_api.py  test_frontend_runs.py  test_frontend_server.py  test_graph_integration.py  test_mvp_agent.py  test_mvp_end_to_end.py  test_mvp_feasibility_lock.py  test_mvp_measure.py  test_mvp_prerequisites.py  test_mvp_rewriter.py  test_mvp_schema.py  test_openroad_v2.py  test_patch_validation_integration.py  test_plugin_parity.py  test_plugin_runner.py  test_postmortem_v2.py  test_release_metadata.py  test_rtl_input.py  test_suite.py  test_synthesis.py  test_synthesis_integration.py  test_synthesis_redundancy.py  (+6 more)
(+63 files in other folders)
